Should resize correctly on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -519,31 +519,40 @@ input:checked + .slider:before {
 #MainContainer {
     width:  100%;
     height:  100%;
-    padding-right:  0px; /* exact value is given by main.js */
+    padding-right:  0px; /* exact value is given by css-controls.js */
 }
 .resume {
-    display: flex;
-    justify-content: center;
     background-color: rgb(10, 10, 10);
     color: var(--localBlack);
+    display: flex;
+    justify-content: center;
 }
 .resume h1, h2, h3, h4, strong, li {
     color: var(--localBlack);
 }
 #shadow {
-    margin: 1em;
     background-color: rgb(100, 100, 100);
+    margin: 1em;
 }
 #paper {
-    margin: 2px;
     background-color: rgb(255, 255, 255);
+    display: inline-block;
+    margin: 2px;
 }
 .content {
     margin: 20px;
     padding: 1em;
 }
-@media only screen and (min-width: 550px) {
-    
+@media only screen and (min-width: 835px) {
+    /* .resume {
+    } */
+    #shadow {
+        width: 500px;
+    }
+    /* #paper {
+    }
+    .content {
+    } */
 }
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http: //fontawesome.io - @fontawesome
